kubeconfigfile/helloWorld-helm/templates/monitoring-ingress.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: monitoring-gateway
  namespace: istio-system
spec:
  selector:
    istio: monitoring-ingress
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: monitoring
  namespace: monitoring
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  hosts:
  - "*"

  gateways:
  - istio-system/monitoring-gateway

  http:
  - match:
    - uri:
        prefix: /grafana
    rewrite:
      uri: /
    route:
    - destination:
        host: monitoring-grafana.monitoring.svc.cluster.local
        port:
          number: 80

  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: monitoring-kube-prometheus-prometheus.monitoring.svc.cluster.local
        port:
          number: 9090
